auth_security/k8s-auth/gen-output/k8s-auth.dex.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-auth
  namespace: dex
spec:
  ports:
  - name: http
    port: 5556
    targetPort: 5556
  selector:
    app: k8s-auth
  type: ClusterIP
